Fix wrapping on select labels. A long string makes it wrap and disappear when floated above..

--- a/views/mdc/assets/scss/components/select.scss
+++ b/views/mdc/assets/scss/components/select.scss
@@ -14,3 +14,7 @@ select {
   line-height: 1.15;
   margin: 0;
 }
+
+.mdc-select__label--float-above {
+  white-space: nowrap;
+}
